force-app/main/default/objects/Recurring_WorkOrder_Configuration__c/Recurring_WorkOrder_Configuration__c.object-meta.xml
<CustomObject>
    <label>Recurring WorkOrder Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring WorkOrder Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>