force-app/main/default/objects/Recurring_WorkOrder_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring WorkOrder Configurations</relationshipLabel>
    <relationshipName>Recurring_WorkOrder_Configurations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>