force-app/main/default/objects/Recurring_WorkOrder_Configuration__c/fields/Automate_Job_Creation__c.field-meta.xml
<CustomField>
    <fullName>Automate_Job_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automate Job Creation</label>
    <type>Checkbox</type>
</CustomField>