force-app/main/default/objects/Recurring_WorkOrder_Configuration__c/fields/Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Billing_Terms__c</fullName>
    <label>Billing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>