force-app/main/default/objects/Recurring_WorkOrder_Configuration__c/fields/Clone_Billables__c.field-meta.xml
<CustomField>
    <fullName>Clone_Billables__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clone Billables</label>
    <type>Checkbox</type>
</CustomField>