force-app/main/default/objects/Recurring_WorkOrder_Configuration__c/fields/Default_New_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_New_Job_Status__c</fullName>
    <label>Default New Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>